creation of tables swim_races swim_events and swim_race_events, models and controllers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://petitbrindefemme.e.p.f.unblog.fr/files/2014/11/open-water-2.jpg);">
+  <div class="container">
+    <h1>Eau libre</h1>
+    <p>Trouve une course d'eau libre près de chez toi</p>
+    <a class="btn btn-primary btn-lg" href="#">Cherche</a>
+  </div>
+</div>
