--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -3,11 +3,13 @@
     <% @swim_races.each do |swim_race| %>
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= swim_race.image_url %>);">
-          <div class="card-category"><%= swim_race.dates %></div>
-          <div class="card-description">
+          <div class="card-date"><%= swim_race.dates %></div>
+          <div class="card-name">
             <h2><%= swim_race.name %></h2>
             <p><%= swim_race.city_name %></p>
+          </div>
             <% events = swim_race.swim_events %>
+          <div class="card-events">
             <ul class="list-inline">
             <% events.each do |event| %>
 
