ok link to swim_race show

--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -18,7 +18,7 @@
             <% end %>
             </ul>
           </div>
-          <a class="card-link" href="#" ></a>
+          <%= link_to("", swim_race_path(swim_race.id), class:"card-link")  %>
         </div>
       </div>
     <% end %>
