--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,6 +27,9 @@
         </li>
       <% else %>
         <li class="nav-item">
+          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
