swim race create basic elements are working

--- a/app/views/swim_races/new.html.erb
+++ b/app/views/swim_races/new.html.erb
@@ -4,6 +4,7 @@
     <%= f.input :city_name, label: "Ville" %>
     <%= f.input :description, label: 'Description'%>
     <%= f.input  :dates, as: :date, label: "Date de la course" %>
+    <%= f.input  :source_url, label: "Site-web de la course" %>
     <%= f.submit "Créer ma course d'Eau Libre", class: "btn btn-primary" %>
   <% end %>
 </div>
