cloudinary and carriewave are installed and working

--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% @swim_races.each do |swim_race| %>
       <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= swim_race.image_url %>);">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);">
           <div class="card-date"><%= swim_race.dates %></div>
           <div class="card-name">
             <h2><%= swim_race.name %></h2>
