routes and controllers to add/edit events to races

--- a/app/views/swim_races/new.html.erb
+++ b/app/views/swim_races/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Créer votre course d'eau libre:</h1>
   <br>
 
-  <%= render 'shared/form', swim_race: @swim_race %>
+  <%= render 'shared/formraces', swim_race: @swim_race %>
 </div>
 
 
