--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -1,6 +1,13 @@
 <div class="container">
   <p><%= @swim_race.name %></p>
   <%= cl_image_tag @swim_race.photo, height: 300, width: 400, crop: :fill %>
+  <div
+    id="map"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
   <p>Ville: <%= @swim_race.city_name %></p>
   <p>Date de la course: <%= @swim_race.dates %></p>
   <p>Description: <%= @swim_race.description %></p>
