--- a/app/views/swim_races/edit.html.erb
+++ b/app/views/swim_races/edit.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
-  <h1>Modifier votre course d'eau libre:</h1>
+  <h1>Editer votre course d'eau libre <%= @swim_race.name %>:</h1>
   <br>
 
   <%= render 'shared/formraces', swim_race: @swim_race %>
+
 </div>
-
-
