--- a/app/views/swim_races/new.html.erb
+++ b/app/views/swim_races/new.html.erb
@@ -1,9 +1,6 @@
 <div class="container">
-  <h1>Créer votre course d'eau libre:</h1>
+  <h1>Créer votre course d'eau libre <%= @swim_race.name %>:</h1>
   <br>
 
   <%= render 'shared/formraces', swim_race: @swim_race %>
 </div>
-
-
-
