submit event form

--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -8,5 +8,5 @@
     </div>
   <% end %>
   <button id="add-distance" class="btn btn-lg btn-secondary">+ Ajouter une épreuve</button>
-  <button id="submitform" class="btn btn-lg btn-primary">Valider cette épreuve</button>
+  <button id="submit-form" class="btn btn-lg btn-primary">Valider cette épreuve</button>
 </div>
