good work on the edition of events of a specific race

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,3 +3,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+
+.form-event {
+  background-color: rgb(180, 180, 180);
+  border-radius: 1em;
+  padding: 1em;
+  margin-bottom: 1em;
+}
