--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -1,5 +1,4 @@
-
-<%= simple_form_for [@swim_race, @swim_event], html: { id: :form_new_event1, class: "form-event" }  do |f| %>
+<%= simple_form_for [@swim_race, @swim_event], html: { id: :form_new_event}  do |f| %>
   <h5>Epreuve:</h5>
   <div class="form-distance" >
     <%= f.input :distance, label: 'Distance (km):' %>
