--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://petitbrindefemme.e.p.f.unblog.fr/files/2014/11/open-water-2.jpg);">
   <div class="container">
     <h1>Eau libre</h1>
-    <p>Trouve une course d'eau libre près de chez toi</p>
-    <a class="btn btn-primary btn-lg" href="#">Cherche</a>
+    <p>Trouve une course de natation en eau libre près de chez toi:</p>
+    <%= link_to("Je veux nager", swim_races_path, class: "btn-outline") %>
+    <%= link_to("J'organise une course", new_swim_race_path, class: "btn-outline") %>
   </div>
 </div>
