--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
         </li>
+        <li>
+          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
