--- a/app/views/swim_races/new.html.erb
+++ b/app/views/swim_races/new.html.erb
@@ -1,6 +1,6 @@
-<div class="form-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1531043992167-48bedfe82ece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=2768&q=80);">
+<div class="race-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1531043992167-48bedfe82ece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=2768&q=80);">
   <div class="container">
-      <h1>Créer votre course d'eau libre <%= @swim_race.name %>:</h1>
+      <h1>Créer votre course d'eau libre:</h1>
       <br>
       <%= render 'shared/formraces', swim_race: @swim_race %>
   </div>
