--- a/app/views/swim_events/edit.html.erb
+++ b/app/views/swim_events/edit.html.erb
@@ -1,27 +1,23 @@
-<div class="container">
-  <h1>Editer les épreuves de votre course d'eau libre <%= @swim_race.name %>:</h1>
-  <br>
-  <% if @swim_events.length == 0  %>
-    <%= simple_form_for [@swim_race, @swim_event], html: { id: :form_new_event}  do |f| %>
-        <h5>Epreuve:</h5>
-        <div class="form-distance" >
-          <%= f.input :distance, label: 'Distance (km):' %>
-          <%= f.input :price, label: 'Price:'%>
-          <%= f.input :comment, label: 'Equipement:'%>
-        </div>
-      <% end %>
-  <% else  %>
-    <%=  @swim_events.each do |swim_event| %>
-      <%= simple_form_for [@swim_race, swim_event], html: { id: :form_new_event}  do |f| %>
-        <h5>Epreuve:</h5>
-        <div class="form-distance" >
-          <%= f.input :distance, label: 'Distance (km):' %>
-          <%= f.input :price, label: 'Price:'%>
-          <%= f.input :comment, label: 'Equipement:'%>
-        </div>
+<div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1531043992167-48bedfe82ece?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=2768&q=80);">
+  <div class="container">
+    <h1>Editer les épreuves de votre course d'eau libre "<%= @swim_race.name %>":</h1>
+    <br>
+    <% if @swim_events.length == 0  %>
+      <%= render 'shared/formevents', swim_race: @swim_race %>
+    <% else  %>
+      <%  @swim_events.each do |swim_event| %>
+        <%= simple_form_for [@swim_race, swim_event], remote: true, html: { id: :form_new_event}  do |f| %>
+          <h5>Epreuve:</h5>
+          <div class="form-distance" >
+            <%= f.input :distance, label: 'Distance (km):' %>
+            <%= f.input :price, label: 'Price:'%>
+            <%= f.input :comment, label: 'Equipement:'%>
+          </div>
+        <% end %>
       <% end %>
     <% end %>
-  <% end %>
-  <button id="add-distance" class="btn btn-lg btn-secondary">+ Ajouter une épreuve</button>
-  <button id="submit-form" class="btn btn-lg btn-primary">Valider ces épreuves</button>
+    <button id="add-distance" class="btn btn-lg btn-secondary">+ Ajouter une épreuve</button>
+    <button id="submit-form" class="btn btn-lg btn-primary">Valider ces épreuves</button>
+  </div>
 </div>
+
