--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -21,6 +21,10 @@
       </div>
     <% end %>
   </div>
+  <%= simple_form_for :search, url: swim_races_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+  <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"} %>
+  <%= f.submit "Search", class: "btn btn-primary" %>
+<% end %>
  <div
     id="map"
     style="width: 100%;
