--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </div>
   <%= simple_form_for :search, url: swim_races_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-  <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"} %>
+  <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, label: "Ma ville:" %>
   <%= f.submit "Search", class: "btn btn-primary" %>
 <% end %>
  <div
@@ -32,5 +32,6 @@
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
+
 </div>
 
