--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -46,3 +46,10 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  text-align: center;
+}
