--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -1,37 +1,44 @@
 <div class="container">
-  <div class="row">
-    <% @swim_races.each do |swim_race| %>
-      <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);">
-          <div class="card-date"><%= swim_race.dates %></div>
-          <div class="card-name">
-            <h2><%= swim_race.name %></h2>
-            <p><%= swim_race.city_name %></p>
-          </div>
-          <% events = swim_race.swim_events %>
-            <div class="card-events">
-              <ul class="list-inline">
-              <% events.each do |event| %>
-                <li class="list-inline-item"><%= event.distance %> km</li>
-              <% end %>
-              </ul>
+  <div>
+    <h2 class="text-center">Les courses:</h2>
+    <div class="row">
+      <% @swim_races.each do |swim_race| %>
+        <div class="col-xs-12 col-sm-4">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);">
+            <div class="card-date"><%= swim_race.dates %></div>
+            <div class="card-name">
+              <h2><%= swim_race.name %></h2>
+              <p><%= swim_race.city_name %></p>
             </div>
-          <%= link_to("", swim_race_path(swim_race.id), class:"card-link")  %>
+            <% events = swim_race.swim_events %>
+              <div class="card-events">
+                <ul class="list-inline">
+                <% events.each do |event| %>
+                  <li class="list-inline-item"><%= event.distance %> km</li>
+                <% end %>
+                </ul>
+              </div>
+            <%= link_to("", swim_race_path(swim_race.id), class:"card-link")  %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-  <%= simple_form_for :search, url: swim_races_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-  <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, label: "Ma ville:" %>
-  <%= f.submit "Search", class: "btn btn-primary" %>
-<% end %>
- <div
-    id="map"
-    style="width: 100%;
-    height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  ></div>
-
+  <div>
+    <h2 class="text-center">Rechercher une course:</h2>
+    <div class="search-form">
+      <%= simple_form_for :search, url: swim_races_path, method: "GET" do |f| %>
+        <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, label: "Ma ville:" %>
+        <%= f.submit "Search", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+   <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
+  </div>
 </div>
 
