links to edit/delete race and add/edit/delete events on show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,7 @@
   background-position: center;
   color: white;
   position: relative;
+  margin: 0.5em 0em;
 }
 .card-user {
   position: absolute;
