--- a/app/views/swim_races/my_races.html.erb
+++ b/app/views/swim_races/my_races.html.erb
@@ -44,7 +44,7 @@
           </table>
           <button class="btn btn-secondary"><%= link_to "Ajouter des épreuves",  new_swim_race_swim_event_path(swim_race) %>
           </button>
-          <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(swim_race) %>
+          <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(swim_race, events) %>
           </button>
         </div>
       <% end %>
