--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,17 +23,17 @@
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
+            <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link" %>
+            <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
           </div>
         </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
-        </li>
         <li>
           <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Se connecter", new_user_session_path, class: "nav-link" %>
