--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -12,8 +12,6 @@
         <p><%= link_to(@swim_race.source_url, @swim_race.source_url) %></p>
         <p><%= @swim_race.longitude %></p>
         <p><%= @swim_race.latitude %></p>
-        <p><strong>Créé par:</strong></p>
-        <p><%= @swim_race.user.email %></p>
       </div>
       <div class="race-media">
         <%= cl_image_tag @swim_race.photo, height: 300, width: 400, crop: :fill %>
@@ -26,7 +24,16 @@
         ></div>
       </div>
     </div>
+    <% if @swim_race.user_id == current_user.id %>
+      <button class="btn btn-secondary"><%= link_to "Modifier cette course", edit_swim_race_path(@swim_race) %>
+        </button>
+      <button class="btn btn-warning"><%= link_to "Supprimer cette course", swim_race_path(@swim_race),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+      </button>
+    <% end  %>
   </div>
+
   <div class="race-events">
     <h2>Epreuves:</h2>
     <% events = @swim_race.swim_events %>
@@ -38,7 +45,18 @@
         </div>
         <p><strong>Informations de l'épreuve:</strong></p>
         <p><%= event.comment %></p>
+        <% if @swim_race.user_id == current_user.id %>
+          <%= link_to "Supprimer", swim_race_swim_event_path(@swim_race, event),
+                          method: :delete,
+                          data: { confirm: "Are you sure?" } %>
+        <% end %>
       </div>
+    <% end %>
+    <% if @swim_race.user_id == current_user.id %>
+      <button class="btn btn-secondary"><%= link_to "Ajouter des épreuves",  new_swim_race_swim_event_path(@swim_race) %>
+      </button>
+      <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(@swim_race) %>
+      </button>
     <% end %>
   </div>
 </div>
