--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -47,9 +47,13 @@
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
 
+
 .search-form {
-  display: flex;
-  justify-content: center;
-  align-item: center;
-  text-align: center;
+  position: relative;
+}
+
+.inline-absolute {
+  position: absolute;
+  top: 0px;
+  right: 1em;
 }
