responsive swim_race index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,10 @@
-.navbar-lewagon {
+.navbar {
   justify-content: space-between;
-  background: white;
+  background: black;
+}
+
+.white {
+  color: white!important;
 }
 
 .navbar-lewagon .navbar-collapse {
