--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,34 +12,34 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
+          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
         </li>
          <li class="nav-item">
-          <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link" %>
+          <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
+          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
-            <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link" %>
-            <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
+            <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
+            <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link white" %>
+            <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
           </div>
         </li>
       <% else %>
         <li>
-          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link" %>
+          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link" %>
+          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Se connecter", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Se connecter", new_user_session_path, class: "nav-link white" %>
         </li>
         <li class="nav-item">
-          <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link" %>
+          <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link white" %>
         </li>
       <% end %>
     </ul>
