change call to action on landing page and banner on swim_race index

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -52,6 +52,10 @@
   position: relative;
 }
 
+.search-form-home {
+  display: flex;
+  justify-content: space-around ;
+}
 .inline-absolute {
   position: absolute;
   top: 0px;
