--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -23,7 +23,12 @@ p {
 #map {
   width:100%;
   height:100vh;
+}
 
+.back {
+  border-radius: 0.2em;
+  background-color: #EEEFEE;
+  box-shadow:0.01em 0.01em 0.01em black;
 }
 
 .space-between {
