--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,18 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://petitbrindefemme.e.p.f.unblog.fr/files/2014/11/open-water-2.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(4,6,1,0.4), rgba(6,102,248,0.5)), url(http://petitbrindefemme.e.p.f.unblog.fr/files/2014/11/open-water-2.jpg);">
   <div class="container">
     <h1>Eau libre</h1>
-    <p>Trouve une course de natation en eau libre près de chez toi:</p>
-    <%= link_to("Je veux nager", swim_races_path, class: "btn-outline") %>
-    <%= link_to("J'organise une course", new_swim_race_path, class: "btn-outline") %>
+    <p>Trouve ta prochaine course de natation en eau libre près de chez toi:</p>
+    <div class="search-form-home">
+      <%= simple_form_for :search, url: swim_races_path, method: "GET" do |f| %>
+        <div class="row">
+          <div class="col-xs-12 cl-md-9">
+            <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, placeholder: "Chercher une ville", label: false %>
+          </div>
+          <div class="col-xs-12 cl-md-3">
+            <%= f.submit "Rechercher", class: "btn btn-primary" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
