--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,47 +1,23 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag " " %>
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <a href="/" class="navbar-wagon-brand white">
+    <i class="fas fa-swimmer"></i>
+  </a>
+
+  <!-- Right Navigation -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <% if user_signed_in? %>
+    <%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+    <%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+    <%= link_to raw('<i class="fas fa-tasks"></i> Gérer mes courses'),  swim_races_my_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+    <% else %>
+      <%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+      <%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+      <%= link_to "Se connecter", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+      <%= link_to "S'inscrire", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link white" %>
     <% end %>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
-        </li>
-         <li class="nav-item">
-          <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link white" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
-        </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
-            <%= link_to "Voir mes courses",  swim_races_my_races_path, class: "nav-link white" %>
-            <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
-          </div>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Rechercher une course", swim_races_path, class: "nav-link white" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Créer une nouvelle course", new_swim_race_path, class: "nav-link white" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Se connecter", new_user_session_path, class: "nav-link white" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link white" %>
-        </li>
-      <% end %>
-    </ul>
   </div>
+
+  <!-- Dropdown appearing on mobile only -->
 </div>
+
