--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -1,4 +1,8 @@
-<div class="container">
+
+<div class="banner half" style="background-image: linear-gradient(rgba(4,6,1,0.4), rgba(6,102,248,0.5)), url(https://res.cloudinary.com/dzxrdf9za/image/upload/v1553374879/eau%20libre/vlcsnap-2018-01-27-11h36m41s032.png);">
+</div>
+<br>
+<div class="container back">
   <br>
   <h2 class="text-center">Rechercher une course:</h2>
     <div class="row">
