swim race show responsive

--- a/app/assets/stylesheets/components/_showrace.scss
+++ b/app/assets/stylesheets/components/_showrace.scss
@@ -28,15 +28,7 @@
   right: 1em;
 }
 
-.media {
-  padding: 0.25em;
-}
-
-
 .img_my_race {
-  width: 15em ;
-  height: 10em;
-  position: absolute;
-  top: 1em;
-  right: 1em;
+  width: 100%;
+  height: 75%;
 }
