--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -4,13 +4,17 @@
 <br>
 <div class="container back">
   <br>
-  <h2 class="text-center">Rechercher une course:</h2>
+  <% if @city_name.nil? %>
+      <h2 class="text-center">Rechercher une course:</h2>
+    <% else %>
+      <h2 class="text-center">Les courses autour de <%= @city_name %></h2>
+  <% end %>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="race-container">
             <%= simple_form_for :search, url: swim_races_path, method: "GET", input_html: { class: "form-inline search-form" } do |f| %>
              <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, placeholder: "Chercher une ville", label: false %>
-              <%= f.submit "Search", class: "btn btn-primary inline-absolute" %>
+              <%= f.submit "Rechercher", class: "btn btn-primary inline-absolute" %>
             <% end %>
             <div class="row">
               <% @swim_races.each do |swim_race| %>
