--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -1,64 +1,67 @@
-<div class="container">
-
-  <div class="race-events">
-    <h1 class="text-center"><%= @swim_race.name %></h1>
-    <div class="race-data space-between">
-      <div class="race-infos">
-        <h2>Informations:</h2>
-        <p><strong>Ville: </strong><%= @swim_race.city_name %></p>
-        <p><strong>Date de la course: </strong> <%= @swim_race.dates %></p>
-        <p><strong>Description:</strong></p>
-        <p><%= @swim_race.description %></p>
-        <p><strong>Site internet de l'organisateur:</strong></p>
-        <p><%= link_to(@swim_race.source_url, @swim_race.source_url) %></p>
-      </div>
-      <div class="race-media">
-        <div class="media">
-        <%= cl_image_tag @swim_race.photo, height: 300, width: 400, crop: :fill %>
+  <div class="container">
+    <div class="race-events">
+      <h1 class="text-center"><%= @swim_race.name %></h1>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <div class="race-data space-between">
+            <div class="race-infos">
+              <h2>Informations:</h2>
+              <p><strong>Ville: </strong><%= @swim_race.city_name %></p>
+              <p><strong>Date de la course: </strong> <%= @swim_race.dates %></p>
+              <p><strong>Description:</strong></p>
+              <p><%= @swim_race.description %></p>
+              <p><strong>Site internet de l'organisateur:</strong></p>
+              <p><%= link_to(@swim_race.source_url, @swim_race.source_url) %></p>
+            </div>
+          </div>
+          <% if @swim_race.user_id == current_user.id %>
+            <button class="btn btn-secondary"><%= link_to "Modifier cette course", edit_swim_race_path(@swim_race) %>
+            </button>
+            <button class="btn btn-warning"><%= link_to "Supprimer cette course", swim_race_path(@swim_race),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %>
+            </button>
+          <% end %>
+          <br>
+          <div class="swim-events">
+            <h2 class= text-center>Epreuves:</h2>
+            <% events = @swim_race.swim_events %>
+            <% events.each do |event| %>
+              <div class="space-between">
+                <p><strong>Distance: </strong><%= event.distance %> km</p>
+                <p><strong>Prix: </strong><%= event.price %> euros</p>
+              </div>
+              <p><strong>Informations de l'épreuve:</strong></p>
+              <p><%= event.comment %></p>
+              <% if @swim_race.user_id == current_user.id %>
+                <%= link_to "Supprimer", swim_race_swim_event_path(@swim_race, event),
+                                  method: :delete,
+                                  data: { confirm: "Are you sure?" } %>
+              <% end %>
+            <% end %>
+            <% if @swim_race.user_id == current_user.id %>
+              <button class="btn btn-secondary"><%= link_to "Ajouter des épreuves",  new_swim_race_swim_event_path(@swim_race) %>
+              </button>
+              <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(@swim_race) %>
+              </button>
+            <% end %>
+          </div>
         </div>
-
-        <div
-          id="map"
-          style="width: 400px;
-          height: 300px;"
-          data-markers="<%= @markers.to_json %>"
-          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-        ></div>
+        <div class="col-xs-12 col-md-6">
+          <div class="race-data">
+            <div class="race-media">
+              <%= cl_image_tag @swim_race.photo, class: "img_my_race" %>
+              <br>
+              <div
+                id="map"
+                data-markers="<%= @markers.to_json %>"
+                data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <% if @swim_race.user_id == current_user.id %>
-      <button class="btn btn-secondary"><%= link_to "Modifier cette course", edit_swim_race_path(@swim_race) %>
-        </button>
-      <button class="btn btn-warning"><%= link_to "Supprimer cette course", swim_race_path(@swim_race),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-      </button>
-    <% end  %>
-  </div>
-
-  <div class="race-events">
-    <h2 class= text-center>Epreuves:</h2>
-    <% events = @swim_race.swim_events %>
-    <% events.each do |event| %>
-      <div class="swim-events">
-        <div class="space-between">
-          <p><strong>Distance: </strong><%= event.distance %> km</p>
-          <p><strong>Prix: </strong><%= event.price %> euros</p>
-        </div>
-        <p><strong>Informations de l'épreuve:</strong></p>
-        <p><%= event.comment %></p>
-        <% if @swim_race.user_id == current_user.id %>
-          <%= link_to "Supprimer", swim_race_swim_event_path(@swim_race, event),
-                          method: :delete,
-                          data: { confirm: "Are you sure?" } %>
-        <% end %>
-      </div>
-    <% end %>
-    <% if @swim_race.user_id == current_user.id %>
-      <button class="btn btn-secondary"><%= link_to "Ajouter des épreuves",  new_swim_race_swim_event_path(@swim_race) %>
-      </button>
-      <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(@swim_race) %>
-      </button>
-    <% end %>
   </div>
 </div>
