--- a/app/assets/stylesheets/components/_showrace.scss
+++ b/app/assets/stylesheets/components/_showrace.scss
@@ -22,6 +22,13 @@
   position: relative;
 }
 
+.event-box {
+  border: solid rgba(220,220,220, 0.6) 1px;
+  border-radius: 0.2em;
+  margin-bottom: 0.2em;
+  padding: 0.2em;
+}
+
 .top-right {
   position: absolute;
   bottom: 1em;
@@ -31,4 +38,5 @@
 .img_my_race {
   width: 100%;
   height: 75%;
+  margin-bottom: 0.2em;
 }
